# project-researchcrew-ai

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
knowledge/: eoi_guidelines_nihr.txt  recruitment_strategies.txt  site_identification_questions.txt  study1.txt  study2.txt  study3.txt  thechelseapractice.txt
researchcrew_ai/: main.py  params.py  utils.py
researchcrew_ai/automation/: git_merge.py  git_push.py
src/researchcrew_ai/: main.py  notionhelper.py  utils.py
src/researchcrew_ai/automation/: git_merge.py  git_push.py
src/researchcrew_ai/config/: agents.yaml  tasks.yaml
src/researchcrew_ai/notionfier/: renderer.py
src/researchcrew_ai/notionfier/api/: __init__.py  block_objects.py  common_objects.py
src/researchcrew_ai/notionfier/plugins/: __init__.py  footnotes.py
src/researchcrew_ai/secrets/: import_secrets.py
src/researchcrew_ai/tools/: custom_tools.py  custom_tools_terminal.py
